# EqRCpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  list of wrappers.txt  tmp.c
docs/: EqRCpp Analysis Classes.md  Equating Recipes Examples Output Comparison.R  Import Equating Recipes Datasets.R  wrapper functions.md
docs/EquatingRecipesExamples/: ConvRawSS2.in.json  KB6Vitems.json  KB6Xdist.ST.json  KB6Xitems.json  KB6Yitems.json  dummyV1items.json  dummyV3items.json  dummyXdist.json  dummyXitems.json  dummyYdist.json  fdexample.dat.json  yctmath.TXT.json
docs/EquatingRecipesSource/: CLL_Equate.c  CMakeLists.txt  ERutilities.c  IRTeq.c  IRTeq.h  IRTst.h  kernel_Equate.c
docs/examples/: KB6Vitems  KB6Xdist  KB6Xitems  KB6Ydist  KB6Yitems  chapter2.json  chapter3.json  chapter4.json  chapter5.json  chapter6.json  chapter7.json  dummyV3items.txt  dummyXdist.txt  dummyXitems.txt  dummyYdist.txt  dummyYitems.txt
include/equating_recipes/: analytic_standard_errors.hpp  beta_binomial.hpp  bfgs_optimizer.hpp  bootstrap.hpp  cg_equipercentile_equating.hpp  cg_no_smoothing.hpp  continuized_log_linear_equating.hpp  cubic_spline.hpp  equated_scaled_scores.hpp  haebara_function.hpp  irt_equating.hpp  irt_model_functions.hpp  irt_scale_transformation.hpp  kernel_equating.hpp  lbfgs_optimizer.hpp  log_linear_equating.hpp  optimization_function.hpp  results_document.hpp  rg_and_sg_equating.hpp  rg_and_sg_no_smooth.hpp  score_statistics.hpp  stocking_lord_function.hpp  utilities.hpp
include/equating_recipes/analyses/: analyses.hpp  analytic_standard_errors.hpp  bivariate_statistics.hpp  common_item_nonequivalent_groups.hpp  equated_scaled_scores.hpp  irt_scale_transformation.hpp  linear_equating_random_groups.hpp  random_groups_equating.hpp  stocking_lord.hpp  univariate_statistics.hpp
include/equating_recipes/analyses/continuized_log_linear_equating/: cine_equating.hpp  random_groups_equating.hpp  single_group_equating.hpp
include/equating_recipes/analyses/kernel_equating/: cine_equating.hpp  random_groups_equating.hpp  single_group_equating.hpp
include/equating_recipes/analyses/linear_equating/no_smoothing/: common_item_nonequivalent_groups.hpp  random_groups_equating.hpp  single_group_equating.hpp
include/equating_recipes/datasets/: bivariate_score_dataset.hpp  univariate_score_dataset.hpp
include/equating_recipes/implementation/: analytic_standard_errors.hpp  beta_binomial.hpp  bfgs_optimizer.hpp  bootstrap.hpp  cg_equipercentile_equating.hpp  cg_no_smoothing.hpp  continuized_log_linear_equating.hpp  cubic_spline.hpp  haebara_function.hpp  irt_equating.hpp  irt_model_functions.hpp  irt_scale_transformation.hpp  kernel_equating.hpp  lbfgs_optimizer.hpp  log_linear_equating.hpp  observed_score_distribution.hpp  optimization_function.hpp  rg_and_sg_equating.hpp  stocking_lord_function.hpp  utilities.hpp
include/equating_recipes/json/: json_document.hpp  structures.hpp
include/equating_recipes/methods/: analytic_standard_errors.hpp
include/equating_recipes/structures/: all_structures.hpp  beta_binomial_smoothing.hpp  bivariate_log_linear_smoothing.hpp  bivariate_statistics.hpp  bivariate_statistics_input_data.hpp  bootstrap_equated_raw_score_results.hpp  bootstrap_equated_scaled_scores_results.hpp  cg_equipercentile_equating_results.hpp  common_item_specification.hpp  criterion_comparison_type.hpp  cubic_spline_postsmoothing.hpp  design.hpp  design_matrix_type.hpp  equated_raw_score_bootstrap_results.hpp  equated_raw_score_results.hpp  equated_raw_scored_results.hpp  equated_scaled_score_bootstrapt_results.hpp  equated_scaled_score_results.hpp  equated_scaled_scores_results.hpp  form_type.hpp  functor.hpp  input_parameters.hpp  irt_equating_results.hpp  irt_fitted_distribution.hpp  irt_input.hpp  irt_method.hpp  irt_model.hpp  irt_scale_score_transformation.hpp  irt_scale_tranformation_method.hpp  irt_scale_transformation_control.hpp  irt_scale_transformation_data.hpp  irt_scale_transformation_item_results.hpp  irt_scale_transformation_method.hpp  irt_true_score_equating.hpp  item_specification.hpp  loss_spec.hpp  method.hpp  moments.hpp  optimization_results.hpp  p_data.hpp  (+9 more)
include/equating_recipes/wrappers/: beta_binomial.hpp  bootstrap.hpp  cg_equipercentile_equating.hpp  cg_no_smoothing.hpp  continuized_log_linear_equating.hpp  cubic_spline.hpp  equated_scaled_scores.hpp  haebara_function.hpp  irt_equating.hpp  irt_scale_transformation.hpp  kernel_equating.hpp  lbfgs_optimizer.hpp  log_linear_equating.hpp  optimization_function.hpp  rg_and_sg_equating.hpp  stocking_lord_function.hpp  utilities.hpp
src/: entry.cpp
src/equating_recipes/: utilities.cpp
src/equating_recipes/structures/: bivariate_statistics.cpp  moments.cpp  univariate_statistics.cpp  utilities.cpp
tests/: beta_binomial.hpp  bivariate_statistics.hpp  equated_scaled_scores.hpp  matrix_decomp.hpp  moments.hpp  rg_and_sg.hpp  rg_and_sg_equating.hpp  runner.cpp  solving.hpp  univariateStatistics.hpp  univariate_statistics.hpp
tests/examples/: CMakeLists.txt  chapter2.hpp  chapter3.hpp  chapter4.hpp  chapter5.hpp  chapter6.hpp  chapter7.hpp  chapter8.hpp  irt_scale_transformation.hpp  obs_score_dist.hpp  runner.cpp  s-x2.hpp
tests/examples/datasets/: actmathfreq.hpp  dummyV3Items.hpp  item_pair_file.hpp  item_specs_file.hpp  lsat6_items.hpp  mondatx.hpp  mondaty.hpp  quadrature_file.hpp  yctmath.hpp
tests/examples/resources/flat/: LSAT6Xitems  LSAT6Ydist  LSAT6Yitems
tests/examples/resources/json/datasets/: Conversion-reordered.DAT.json  KB6Xdist.json  KB6Xitems.ST.json  KB6Ydist.json  actmathfreq.dat.json  dummyXdist.ST.json  dummyXitems.ST.json  dummyYitems.json  dummyv2items.json  mondatx.dat.json  mondaty.dat.json
tests/examples/resources/json/original_results/: chapter4.json
tests/fixtures/: actmathfreq.hpp  equating_recipe_input_dataset.hpp  lsat6.hpp  mondatx.hpp
tests/tryouts/: equated_scaled_scores.hpp  lsat6.hpp  matrix_decomp.hpp  moments.hpp  rg_and_sg_equating.hpp  solving.hpp  univariate_statistics.hpp
(+11 files in other folders)
